<resources>
    <string name="app_name">Android Sample Calculator App</string>
    <string name="play_button">Play</string>
    <string name="menu_button">Menu</string>
    <string name="scores_button">High Scores</string>
    <string name="quit_button">Quit</string>
    <string name="equals">=</string>
    <string name="scores">High Scores</string>
    <string name="no_scores">You have not got any scores</string>
</resources>
