<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">
    <TextView
            android:layout_width="265dp"
            android:layout_height="31dp" android:id="@+id/mainPageTitle"
            android:textSize="18sp" android:textAlignment="center"
            android:text="@string/app_name" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="65dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/play_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp" android:id="@+id/playButton"
            android:layout_marginTop="108dp"
            app:layout_constraintTop_toBottomOf="@+id/mainPageTitle" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/scores_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp" android:id="@+id/scoresButton"
            android:layout_marginTop="240dp"
            app:layout_constraintTop_toBottomOf="@+id/mainPageTitle" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/quit_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp" android:id="@+id/quitButton"
            android:layout_marginTop="372dp"
            app:layout_constraintTop_toBottomOf="@+id/mainPageTitle" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.501"/>
</androidx.constraintlayout.widget.ConstraintLayout>