<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ScoreActivity">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/menuButton"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp" android:layout_marginEnd="25dp" app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/menu_button"/>
    <TextView
            android:text="@string/scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="115dp" app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/top4"
            android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="452dp"
            app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/top1"
            android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="292dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/top2"
            android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="344dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/top3"
            android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="400dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/top5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="506dp"/>
    <TextView
            android:text="@string/no_scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/noScoresText"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="247dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>